--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "lucide-react": "^0.553.0",
+    "mongodb": "^7.0.0",
     "mongoose": "^8.19.3",
     "next": "16.0.3",
     "react": "19.2.0",
